...
    <View style={[styles.container, { backgroundColor: c.bg }]}>
      <View style={styles.logoContainer}>
        <Image
          source={store.logo}
          style={[{ width: store.logoWidth, height: store.logoHeight }]}
          resizeMode="contain"
          testID="app_logo" // 👈 THÊM DÒNG NÀY
        />
      </View>

      {/* Auth Section */}
      <View style={styles.authSection}>
        <View style={styles.authTitleContainer}>
...
